# torchcsr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.py  setup.py
build_tools/setup_helpers/: extension.py
nestedtensor/: version.py
nestedtensor/csrc/: py_init.cpp
torchcsr/: __init__.py  version.py
torchcsr/csrc/: CMakeLists.txt  py_init.cpp  softmax.cpp
